<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardCornerRadius="6dp"
        android:minHeight="280dp"
        android:minWidth="380dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="280dp"
            android:minWidth="380dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/customize_pizza"
                android:textColor="@color/black" />

            <View
                android:layout_width="200dp"
                android:layout_height="0.5dp"
                android:layout_gravity="center"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/crust"
                android:textColor="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/crusts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="200dp"
                android:layout_height="0.5dp"
                android:layout_gravity="center"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/size"
                android:textColor="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sizes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="280dp"/>

            <Button
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/black"
                android:text="@string/add_to_cart"
                android:padding="4dp"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>
